--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 	{% include "include/head.html" %}
+	{% block head %}
+	
+	{% endblock head %}
 <body>
 	{% include "include/nav.html" %}
 	<div id="wrap">
