--- a/index/static/schedule/css/style.css
+++ b/index/static/schedule/css/style.css
@@ -12,45 +12,68 @@ h2 {
 	border-radius: 10px;
 }
 
-#schedule_block #months {
+#schedule_block #month_selection {
 	display: flex;
-	/*background: #1C192B;
-	color: #DCDFE0;*/
+	background: #1C192B;
+	color: #DCDFE0;
 }
 
-#schedule_block #months .month {
+#schedule_block #month_selection .month {
 	flex: 1;
 	font-size: 20px;
 	padding: 10px;
 	position: relative;
+	opacity: 0.4;
 }
 
-#schedule_block #months .month::after {
+#schedule_block #month_selection .activated {
+	cursor: pointer;
+	opacity: 1;
+}
+
+#schedule_block #month_selection .activated::after {
 	content: "";
 	position: absolute;
 	width: 100%;
-	bottom: 5px;
+	bottom: 0;
 	left: 0;
-	border-bottom: 2px solid #1C192B;
+	border-bottom: 3px solid #DCDFE0;
 	opacity: 0;
 	transition: opacity 0.3s;
 }
 
-#schedule_block #months .month:hover::after {
+#schedule_block #month_selection .activated:hover::after {
 	opacity: 1;
 }
 
-#schedule_block #teams {
-	display: flex;
+#schedule_block #month_selection .selected_month::after {
+	opacity: 1;
 }
 
-#schedule_block #teams .team {
-	flex: 1;
+#schedule_block .team_selection {
+	display: none;
+	border-bottom: #BDBDBD 1px solid;
+	padding: 0 0 10px 0;
 }
 
-#schedule_block #teams .team img {
+#schedule_block .team_selection .team {
+	flex-basis: 110px;
+}
+
+#schedule_block .team_selection .team button {
+	border: 0;
+	background: none;
+	cursor: pointer;
+}
+
+#schedule_block .team_selection .team img {
 	width: 50px;
 	padding: 5px;
+	opacity: 0.2;
+}
+
+#schedule_block .team_selection .team .all {
+	opacity: 1;
 }
 
 #schedule_block #schedules {
@@ -59,26 +82,30 @@ h2 {
 }
 
 #schedule_block #schedules .schedule {
-	display: flex;
+	display: none;
 	padding: 5px 0;
 	align-items: center;
 }
 
 #schedule_block #schedules .schedule .date {
-	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-basis: 100px;
+	width: 100px;
 }
 
+#schedule_block #schedules .schedule .time {
+	align-items: center;
+	justify-content: center;
+	font-size: 14px;
+	width: 120px;
+}
 
 #schedule_block #schedules .schedule .team {
 	display: flex;
-    flex-grow: 1;
-    flex-shrink: 0;
+	flex: 1;
 	overflow: hidden;
 	align-items: center;
-	flex-basis: 300px;
+	width: 300px;
 }
 
 #schedule_block #schedules .schedule .team1 {
@@ -94,23 +121,17 @@ h2 {
 }
 
 #schedule_block #schedules .schedule .result {
-	display: flex;
-	flex-basis: 100px;
+	width: 100px;
 	justify-content: center;
 }
 
-#schedule_block #schedules .schedule .time {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-basis: 150px;
-}
 
 #schedule_block #schedules .schedule .etc {
-	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-basis: 200px;
+	font-size: 14px;
+	color: #AAAAAA;
+	width: 200px;
 }
 
 
