--- a/index/static/css/reset.css
+++ b/index/static/css/reset.css
@@ -3,6 +3,9 @@
 /* blank initialization */
 body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
 
+/* h2 */
+h2 {padding: 0 20px; font-size: 30px; margin-bottom: 10px;}
+
 /* a link initialization */
 a {color: #373a3c; text-decoration: none;}
 a:hover {color: none;}
@@ -25,7 +28,7 @@ table {
 	border-collapse: collapse;
 	overflow: hidden;
 	border-radius: 10px;
-	width: 95%;
+	width: 98%;
 	text-align: center;
 	box-shadow: 0px 0px 10px gray;
 }
