--- a/index/templates/include/nav.html
+++ b/index/templates/include/nav.html
@@ -7,6 +7,6 @@
 		<a href="/schedule">일정</a>
 		<a href="/ranking">순위</a>
 		<a href="/champion?league=LCK_summer&patch=13.14">챔피언 통계</a>
-		<a href="/history?year=22msi">역대 대회</a>
+		<a href="/history?year=23&league=Worlds">역대 대회</a>
 	</div>
 </nav>
