--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -42,7 +42,7 @@ th {
 }
 
 /* nav */
-nav {width: 100%; height: 40px; overflow: hidden; background-color: #1C192B;}
+nav {min-width: 650px; height: 40px; overflow: hidden; background-color: #1C192B;}
 nav #title {float: left; width: 200px; height: 100%; text-align: center;}
 nav #title h1 {vertical-align: middle;}
 nav #title h1 a {color: #DCDFE0; font-size: 26px; line-height: 40px;}
