--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,55 +149,137 @@
 	display: block;
 }
 
-
 /* ranking */
 #ranking {
-	margin: 0 50px 30px 0;
-	width: 100%;
-	float: left;
+	clear: both;
 }
 
 #ranking h2 {
+	padding: 0 20px;
 	font-size: 30px; margin-bottom: 10px;
 }
 
-#ranking #ranking_container {
-	display: grid;
-	grid-auto-flow: column;
-	grid-template-columns: 100px 200px 25px 25px 200px 25px 25px 200px 25px 25px 200px;
-	grid-template-rows: repeat(26, 20px);
-}
-#ranking #ranking_container div {
+#ranking_blocks {
+	margin: 30px auto;
+	width: 98%;
+	display: flex;
+	overflow: hidden;
 	text-align: center;
-}
-
-#ranking #ranking_container .ranking_group {
-	grid-row: span 13;
-	line-height: 260px;
-	font-size: larger;
-}
-
-#ranking #ranking_container .ranking_match {
-	grid-row: span 4;
-	border: solid 2px #1C192B;
-	border-radius: 10px;
 	box-shadow: 0px 0px 10px gray;
-	
+	border-radius: 10px;
 }
 
-#ranking #ranking_container .bottom {
-	border-bottom: solid 2px #1C192B;
+#ranking_blocks .ranking_block {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
 
-#ranking #ranking_container .top {
-	border-top: solid 2px #1C192B;
+#ranking_blocks .ranking_block div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70px;
+	width: 100%;
 }
 
-#ranking #ranking_container .bottom-right {
-	border-bottom: solid 2px #1C192B;
-	border-right: solid 2px #1C192B;
+#ranking_blocks .ranking_block1 {
+	display: flex;
+	flex-basis: 50px;
 }
 
-#ranking #ranking_container .right {
-	border-right: solid 2px #1C192B;
+#ranking_blocks .ranking_block1 .ranking {
+	color: #373a3c;
+}
+
+#ranking_blocks .ranking_block1 .ranking:nth-child(n+1):nth-child(-n+5) {
+	background: #aaddff;
+}
+
+#ranking_blocks .ranking_block1 .ranking:nth-child(n+6):nth-child(-n+7) {
+	background: #97ECAB;
+}
+
+#ranking_blocks .ranking_block1 .ranking:nth-child(n+8):nth-child(-n+11) {
+	background: #FFFF99;
+}
+
+#ranking_blocks .ranking_block2 {
+	display: flex;
+	flex-basis: 280px;
+	border-right: #BDBDBD 1px solid;
+}
+
+#ranking_blocks .ranking_block2 .team .team_name {
+	flex: 1;
+	flex-basis: 200px;
+}
+
+#ranking_blocks .ranking_block2 .team .team_img {
+	flex: 1;
+	flex-basis: 80px;
+}
+
+#ranking_blocks .ranking_block2 .team .team_img img {
+	width: 60px;
+}
+
+#ranking_blocks .ranking_block3 {
+	flex-basis: 60px;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+}
+
+#ranking_blocks .ranking_block3 .game_win:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block3 .game_lose:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block3 .set_win_lose:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block3 .set_diff:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block3 .etc:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block2 .team:nth-child(odd) {
+	background: #E7E7E7;
+}
+
+#ranking_blocks .ranking_block .title {
+	height: 40px;
+	color: #DCDFE0;
+	background: #1C192B;
+}
+
+/* reference */
+.reference {
+	display: flex;
+	margin-bottom: 30px;
+	justify-content: flex-end;
+	font-size: 14px;
+	overflow: hidden;
+}
+.reference .reference_element {
+	margin: 0 0 0 5px;
+}
+.reference .reference_element .reference_letter {
+	border-right: 1px solid #bbb;
+}
+.reference .reference_element:last-child .reference_letter {
+	border-right: 0;
+}
+.reference .reference_element .reference_color {
+	display: inline-block;
+	width: 15px;
+	height: 15px;
 }
