--- a/index/templates/champion.html
+++ b/index/templates/champion.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="static/champion/css/style.css">
-	<title>LCK.lol - 챔피언 통계</title>
+	<title>LCKinfo.lol - 챔피언 통계</title>
 {% endblock %}
 
 {% block content %}
