--- a/index/templates/ranking.html
+++ b/index/templates/ranking.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="static/ranking/css/style.css">
-	<title>LCK.lol - 순위</title>
+	<title>LCKinfo.lol - 순위</title>
 {% endblock %}
 
 {% block content %}
