--- a/index/templates/schedule.html
+++ b/index/templates/schedule.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="static/schedule/css/style.css">
-	<title>LCK.lol - 일정</title>
+	<title>LCKinfo.lol - 일정</title>
 {% endblock %}
 
 {% block content %}
