--- a/index/templates/champion.html
+++ b/index/templates/champion.html
@@ -33,7 +33,7 @@
 			<div class="name_block_menu">챔피언 이름</div>
 			<div class="pick_menu">픽</div>
 			<div class="ban_menu">밴</div>
-			<div class="banpick_rate_menu ascending">밴픽률</div>
+			<div class="banpick_rate_menu descending">밴픽률</div>
 			<div class="win_menu">승리</div>
 			<div class="lose_menu">패배</div>
 			<div class="win_rate_menu">승률</div>
