--- a/index/templates/include/head.html
+++ b/index/templates/include/head.html
@@ -9,4 +9,5 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700;900&display=swap" rel="stylesheet">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052803485032468"
      crossorigin="anonymous"></script>
+	<meta name="google-site-verification" content="PKk12wktKkx1vVt-dXfIx4p3poJnxnpIdHGDOmuluug" />
 </head>
