--- a/index/templates/ranking.html
+++ b/index/templates/ranking.html
@@ -9,50 +9,50 @@
 
 {% block content %}
 	{% load static %}
-	<h2>순위</h2>
-	<div id="ranking_blocks">
-		<div class="ranking_block ranking_block1">
+	<h2>팀 순위</h2>
+	<div id="team_ranking_blocks">
+		<div class="team_ranking_block team_ranking_block1">
 			<div class="title">순위</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="ranking">{{ranking.ranking}}</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block2">
+		<div class="team_ranking_block team_ranking_block2">
 			<div colspan="2" class="title">팀</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="team">
 				<div class="team_img"><img src="{% static 'img/teams/2024spring/'|add:ranking.tricode|add:'.webp' %}"></div>
 				<div class="team_name">{{ranking.team}}</div>
 			</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block3">
+		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">승리</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="game_win">{{ranking.game_win}}</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block3">
+		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">패배</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="game_lose">{{ranking.game_lose}}</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block3">
+		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">세트 득실</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="set_win_lose">{{ranking.set_win}}승 {{ranking.set_lose}}패</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block3">
+		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">득실차</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="set_diff">{{ranking.set_diff}}</div>
 			{% endfor %}
 		</div>
-		<div class="ranking_block ranking_block3">
+		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">기타</div>
-			{% for ranking in ranking_list %}
+			{% for ranking in ranking_list_team %}
 			<div class="etc">{{ranking.etc}}</div>
 			{% endfor %}
 		</div>
@@ -66,6 +66,28 @@
 		</div>
 		<div class="reference_element">
 			<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+		</div>
+	</div>
+	
+	<h2>Player of the Game 순위</h2>
+	<div id="player_ranking_block">
+		<table>
+			<colgroup>
+				<col style="">
+			</colgroup>
+			<tr>
+				<th>순위</th><th colspan=2>선수</th><th colspan=2>팀</th><th>포지션</th><th>POG 점수</th>
+			</tr>
+			{% for player in ranking_list_player %}
+			<tr>
+				<td>{{player.ranking}}</td><td>{{player.name}}</td><td>{{player.nickname}}</td><td><img src="{% static 'img/teams/2024spring/'|add:player.team_tricode|add:'.webp' %}"></td><td>{{player.team}}</td><td><img class="player_ranking_block_position" src="{% static 'img/position/'|add:player.position|add:'_black.webp' %}"></td><td>{{player.POG_point}}</td>
+			</tr>
+			{% endfor %}
+		</table>
+	</div>
+	<div class="reference">
+		<div class="reference_element">
+			<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : Player of the Split &nbsp;</span>
 		</div>
 	</div>
 	
