--- a/index/templates/history_base.html
+++ b/index/templates/history_base.html
@@ -37,25 +37,25 @@
 				<div class="year"><a href="/history?year=16&league=spring">2016</a></div>
 				
 				<div class="year"><a>-</a></div>
-				<div class="year disable"><a href="/history?year=12&league=spring">2012</a></div>
+				<div class="year disable"><a href="#">2012</a></div>
 				<div class="year"><a href="/history?year=13&league=spring">2013</a></div>
 			</div>
 			<div class="years MSI">
-				<div class="year disable"><a href="/history?year=23&league=MSI">2023</a></div>
+				<div class="year disable"><a href="#">2023</a></div>
 				<div class="year"><a>-</a></div>
 				<div class="year"><a>-</a></div>
 				
-				<div class="year disable"><a href="/history?year=20&league=MSI">2020</a></div>
-				<div class="year disable"><a href="/history?year=21&league=MSI">2021</a></div>
-				<div class="year disable"><a href="/history?year=22&league=MSI">2022</a></div>
+				<div class="year disable"><a href="#">2020</a></div>
+				<div class="year disable"><a href="#">2021</a></div>
+				<div class="year disable"><a href="#">2022</a></div>
 				
-				<div class="year disable"><a href="/history?year=17&league=MSI">2017</a></div>
-				<div class="year disable"><a href="/history?year=18&league=MSI">2018</a></div>
-				<div class="year disable"><a href="/history?year=19&league=MSI">2019</a></div>
+				<div class="year disable"><a href="#">2017</a></div>
+				<div class="year disable"><a href="#">2018</a></div>
+				<div class="year disable"><a href="#">2019</a></div>
 				
 				<div class="year"><a>-</a></div>
-				<div class="year disable"><a href="/history?year=15&league=MSI">2015</a></div>
-				<div class="year disable"><a href="/history?year=16&league=MSI">2016</a></div>
+				<div class="year disable"><a href="#">2015</a></div>
+				<div class="year disable"><a href="#">2016</a></div>
 				
 				<div class="year"><a>-</a></div>
 				<div class="year"><a>-</a></div>
@@ -83,25 +83,25 @@
 				<div class="year"><a href="/history?year=13&league=summer">2013</a></div>
 			</div>
 			<div class="years Worlds">
-				<div class="year disable"><a href="/history?year=23&league=Worlds">2023</a></div>
+				<div class="year disable"><a href="#">2023</a></div>
 				<div class="year"><a>-</a></div>
 				<div class="year"><a>-</a></div>
 				
-				<div class="year disable"><a href="/history?year=20&league=Worlds">2020</a></div>
-				<div class="year disable"><a href="/history?year=21&league=Worlds">2021</a></div>
-				<div class="year disable"><a href="/history?year=22&league=Worlds">2022</a></div>
+				<div class="year disable"><a href="#">2020</a></div>
+				<div class="year disable"><a href="#">2021</a></div>
+				<div class="year disable"><a href="#">2022</a></div>
 				
-				<div class="year disable"><a href="/history?year=17&league=Worlds">2017</a></div>
-				<div class="year disable"><a href="/history?year=18&league=Worlds">2018</a></div>
-				<div class="year disable"><a href="/history?year=19&league=Worlds">2019</a></div>
+				<div class="year disable"><a href="#">2017</a></div>
+				<div class="year disable"><a href="#">2018</a></div>
+				<div class="year disable"><a href="#">2019</a></div>
 				
-				<div class="year disable"><a href="/history?year=14&league=Worlds">2014</a></div>
-				<div class="year disable"><a href="/history?year=15&league=Worlds">2015</a></div>
-				<div class="year disable"><a href="/history?year=16&league=Worlds">2016</a></div>
+				<div class="year disable"><a href="#">2014</a></div>
+				<div class="year disable"><a href="#">2015</a></div>
+				<div class="year disable"><a href="#">2016</a></div>
 				
-				<div class="year disable"><a href="/history?year=11&league=Worlds">2011</a></div>
-				<div class="year disable"><a href="/history?year=12&league=Worlds">2012</a></div>
-				<div class="year disable"><a href="/history?year=13&league=Worlds">2013</a></div>
+				<div class="year disable"><a href="#">2011</a></div>
+				<div class="year disable"><a href="#">2012</a></div>
+				<div class="year disable"><a href="#">2013</a></div>
 			</div>
 		</div>
 		<div class="menu_league menu_league2">
@@ -114,8 +114,8 @@
 				<div class="year"><a href="/history?year=13-14&league=winter">2013-14</a></div>
 			</div>
 			<div class="years">
-				<div class="year disable"><a href="/history?year=18&league=asiangame">2018</a></div>
-				<div class="year disable"><a href="/history?year=23&league=asiangame">2023</a></div>
+				<div class="year disable"><a href="#">2018</a></div>
+				<div class="year disable"><a href="#">2023</a></div>
 			</div>
 		</div>
 	</div>
