--- a/index/static/css/reset.css
+++ b/index/static/css/reset.css
@@ -14,9 +14,21 @@ a:hover {color: none;}
 body, input, textarea, select, button, table {
     font-family: 'Noto Sans KR', sans-serif; color: #373a3c;}
 
+/*ads*/
+/*.ads {
+	background: #000; width: 250px; height: 800px; position: absolute;
+	top: 150px;
+}
+.ads1 {
+	left: 10px;
+}
+.ads2 {
+	right: 10px;
+}*/
+
 /* body, wrap tag initialization */
 body {
-	background-color: #F7F7F7; font-weight: bold;}
+	background-color: #F7F7F7; font-weight: bold; overflow: hidden;}
 
 #wrap {
 	width: 1360px; margin: 0 auto; overflow: hidden;}
