Update index.html version

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -8,8 +8,8 @@
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
 	<section id="version">
-		<span id="league_version">대회 버전 : 14.1 /</span>
-		<span id="live_version">라이브 버전 : 14.1b</span>
+		<span id="league_version">대회 버전 : {{league_version}} /</span>
+		<span id="live_version">라이브 버전 : {{live_version}}</span>
 	</section>
 
 	<section id="champion">
