--- a/index/templates/champion.html
+++ b/index/templates/champion.html
@@ -20,6 +20,7 @@
 			<a class="patch all" href="/champion?league=LCK_spring&patch=all">모든 버전</a>
 			<a class="patch" href="/champion?league=LCK_spring&patch=14.1">14.1</a>
 			<a class="patch" href="/champion?league=LCK_spring&patch=14.1b">14.1b</a>
+			<a class="patch" href="/champion?league=LCK_spring&patch=14.1b">14.2</a>
 		</div>
 		<div class="patch_selection MSI">
 		</div>
