--- a/index/templates/include/nav.html
+++ b/index/templates/include/nav.html
@@ -6,7 +6,7 @@
 	<div id="menu">
 		<a href="/schedule">일정</a>
 		<a href="/ranking">순위</a>
-		<a href="/champion?league=LCK_spring&patch=14.1">챔피언 통계</a>
+		<a href="/champion?league=LCK_spring&patch=all">챔피언 통계</a>
 		<a href="/history?year=23&league=summer">역대 대회</a>
 	</div>
 </nav>
