--- a/index/templates/champion.html
+++ b/index/templates/champion.html
@@ -21,6 +21,7 @@
 			<a class="patch" href="/champion?league=LCK_spring&patch=14.1">14.1</a>
 			<a class="patch" href="/champion?league=LCK_spring&patch=14.1b">14.1b</a>
 			<a class="patch" href="/champion?league=LCK_spring&patch=14.2">14.2</a>
+			<a class="patch" href="/champion?league=LCK_spring&patch=14.3">14.3</a>
 		</div>
 		<div class="patch_selection MSI">
 		</div>
